# bitchess

./: .gitignore  README.md  setup.cfg  test.py
bitchess/: __init__.py  board.py  core.py  exceptions.py  game.py  move.py  pieces.py  squareset.py
bitchess/algorithms/: negamax.py
bitchess/squaresets/: constants.py
tests/: test_algorithms.py  test_game_flow_and_data.py  test_legal_move_generation.py  test_move_completion.py  test_pseudolegal_move_generation.py
